feat(form) remaining chars

--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -16,6 +16,10 @@
   @include media('desktop') {
     min-height: $wizard-body-height-desktop;
   }
+  
+  .field-ticker.red{
+    color: $text-error;
+  }
 
   .field-save-changes {
     display: none;
