Styles: Updating copy requirements

--- a/styles/base/_validation.scss
+++ b/styles/base/_validation.scss
@@ -14,6 +14,6 @@
   padding-left: clamp(1rem, 5vw, 1.25rem);
 
   &::before {
-    background-image: url('../../icons/ico-info--warning-circle.svg');
+    background-image: url('/icons/wizard-icons/icon-red-wizard-error-panel.svg');
   }
 }
