--- a/blocks/form/components/toasts/toasts.scss
+++ b/blocks/form/components/toasts/toasts.scss
@@ -1,8 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-/*.toasts-container {
-}*/
-
+/*.toasts-container {}*/
 
 .checkbox-toast {
   @include elevation-3;
