feat(form) limit amount of selections

--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -17,6 +17,15 @@
       }
     }
   }
+  
+  &.max-items-reached{
+    .counter{
+      color: $text-error;
+    }
+    .recommendations-cards-wrapper{
+      display: none;
+    }
+  }
 }
 
 .search-box__input {
