--- a/blocks/form/components/toasts/toasts.scss
+++ b/blocks/form/components/toasts/toasts.scss
@@ -40,7 +40,7 @@
   background-image: url('../../../../icons/ico-info--circle-check.svg');
 }
 .toast-container__icon--error {
-  background-image: url('../../../../icons/ico-info--warning-circle.svg');
+  background-image: url('/icons/ico-info--warning-circle.svg');
 }
 
 /* Message container */
