--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -147,3 +147,6 @@ $stroke-hover-stroke: 2px;
 // input field background colour
 $bg-light-primary: $color-white;
 $bg-light-secondary: $color-shade-blue-04;
+
+// Toasts
+
