--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -149,4 +149,7 @@ $bg-light-primary: $color-white;
 $bg-light-secondary: $color-shade-blue-04;
 
 // Toasts
+$text-toast-primary: $text-dark-primary;
+$text-toast-warning: $color-feedback-orange;
+$text-toast-error: $color-feedback-red;
 
