--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -150,6 +150,8 @@ $bg-light-secondary: $color-shade-blue-04;
 
 // Toasts
 $text-toast-primary: $text-dark-primary;
+$text-toast-secondary: $text-secondary;
 $text-toast-warning: $color-feedback-orange;
 $text-toast-error: $color-feedback-red;
+$text-toast-info: $color-feedback-green;
 
