--- a/styles/settings/_spacings.scss
+++ b/styles/settings/_spacings.scss
@@ -3,6 +3,7 @@ $spacing-050: 2px;
 $spacing-100: 4px;
 $spacing-200: 8px;
 $spacing-300: 12px;
+$spacing-350: 14px;
 $spacing-400: 16px;
 $spacing-450: 20px;
 $spacing-500: 24px;
