--- a/blocks/form/components/toast/toast.scss
+++ b/blocks/form/components/toast/toast.scss
@@ -103,6 +103,7 @@ $icon-error: '/icons/icon-toast-red-error.svg';
   color: $text-toast-secondary;
   font-size: $size-font-toast-desc;
   line-height: 1.35;
+  width:540px;
 }
 
 /* Close button */
